--- a/index.ipynb
+++ b/index.ipynb
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca = None\n",
+    "la_boca = neighborhoods[-1]\n",
     "neighborhoods.append"
    ]
   },
