--- a/index.ipynb
+++ b/index.ipynb
@@ -401,7 +401,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca_marker  = folium.Marker([ba_latitude, ba_longitude])"
+    "la_boca_marker  = folium.Marker([[-34.6345, -58.3631]])"
    ]
   },
   {
