Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -401,7 +401,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca_marker  = folium.Marker([[-34.6345, -58.3631]])"
+    "la_boca_marker  = folium.Marker([[-34.6345, -58.3631]])\n",
+    "buenos_marker.add_to(buenos_map)"
    ]
   },
   {
