--- a/index.ipynb
+++ b/index.ipynb
@@ -402,7 +402,7 @@
    "outputs": [],
    "source": [
     "la_boca_marker  = folium.Marker([[-34.6345, -58.3631]])\n",
-    "buenos_marker.add_to(buenos_map)"
+    "la_boca_marker.add_to(buenos_map)"
    ]
   },
   {
