--- a/index.ipynb
+++ b/index.ipynb
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -251,10 +251,10 @@
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x7f7974bf5160>"
+       "<folium.map.Marker at 0x7f7974ac4080>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
