--- a/index.ipynb
+++ b/index.ipynb
@@ -415,7 +415,7 @@
     }
    ],
    "source": [
-    "la_boca_marker  = folium.Marker([[-34.6345, -58.3631]])\n",
+    "la_boca_marker  = marker_\n",
     "la_boca_marker.add_to(buenos_map)"
    ]
   },
